# UPISAS

./: .gitignore  .gitmodules  ExampleStrategy.py  Exemplar.py  README.md  RunnerConfig-579c5918-8179-11ee-a5c1-3e22fb75fe3f.py  Strategy.py  experiments.py  openapi.yaml  pyproject.toml  requirements.txt  run.py  run.sh  test.py  utils.py
UPISAS/: ExampleStrategy.py  Exemplar.py  Knowledge.py  Strategy.py  __init__.py  example_strategy.py  exceptions.py  exemplar.py  goal_management.py  knowledge.py  strategy.py  utils.py
UPISAS/exceptions/: demo_exceptions.py
UPISAS/exemplars/: crowdnav_exemplar.py  demo_exemplar.py  mlops_exemplar.py  swim.py  your_exemplar.py
UPISAS/experiment_runner_configs/: SWIM_example.py
UPISAS/goal_managers/: demo_manager.py
UPISAS/runner/: README.md  __init__.py
UPISAS/strategies/: demo_strategy.py  empty_strategy.py  mcyclops_strategy.py  mlops_strategy.py  swim_reactive_strategy.py
UPISAS/test/: TestExemplar.py  __init__.py  test_exemplar.py  test_exemplar_init.py  test_exemplar_lifecycle.py  test_strategy.py
demo-managed-system/: DemoRunnerConfig.py  Dockerfile  LoopRunnerConfig.py  README.md  app-no-endpoints.js  app.js  fish-finder.js  package.json
mcyclops/: MLRunnerConfig.py  README.md  setup.sh  spam_model.py
mcyclops/data/: accuracy_plot.py  drift_bell_wc_graph.py  e1model_accuracy.py
mcyclops/training/: managed_model.py  train.py
mlops/: Dockerfile  MLRunnerConfig.py  README.md  app.py  pyproject.toml  spam_model.py
mlops/data/: drift_bar_graph.py  drift_bell_unique_graph.py  (+3 more)
runner/: README.md  __init__.py
(+68 files in other folders)
