[tool.poetry]
name = "upisas"
version = "0.1.0"
description = "Unified Python interface for self-adaptive systems exemplars."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.31.0,<2.32.0"
docker = ">=6.1.3,<6.2.0"
jsonschema = ">=4.19.1,<4.20.0"
rich = ">=13.6.0,<13.7.0"
psutil = "^5.9.6"
tabulate = "^0.9.0"
dill = "^0.3.7"
jsonpickle = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
